plugins {
    id 'java'
    id 'io.micronaut.application' version '5.0.0'
    id 'com.gradleup.shadow' version "9.4.2"
}

group = 'com.fullsteam'
version = '1.0.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

micronaut {
    version = "5.0.2"
}

dependencies {
    annotationProcessor("org.projectlombok:lombok:1.18.46")
    annotationProcessor("io.micronaut:micronaut-core")
    annotationProcessor("io.micronaut:micronaut-inject-java")

    compileOnly("org.projectlombok:lombok:1.18.46")
    implementation("io.micronaut:micronaut-http-server-netty")
    implementation("io.micronaut:micronaut-websocket")
    implementation("io.micronaut:micronaut-jackson-databind")
    implementation("io.micronaut:micronaut-runtime")
    implementation("io.micronaut:micronaut-inject")
    implementation("ch.qos.logback:logback-classic")
    implementation("io.micronaut.validation:micronaut-validation")
    runtimeOnly("org.yaml:snakeyaml")

    implementation("org.apache.commons:commons-lang3:3.20.0")
    implementation("commons-io:commons-io:2.22.0")
    implementation("org.dyn4j:dyn4j:5.0.2")

    testAnnotationProcessor("io.micronaut:micronaut-inject-java")
    testImplementation("io.micronaut.test:micronaut-test-junit5")
    testImplementation("org.junit.jupiter:junit-jupiter")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
}

test {
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
    }
}

shadowJar {
    mergeServiceFiles()
//    mainClassName = 'com.fullsteam.Application'
    manifest {
        attributes 'Main-Class': 'com.fullsteam.Application'
    }
    archiveBaseName.set('full-steam')
    archiveVersion.set(project.version)
    archiveClassifier.set('')
    zip64 = true
}

